# leaflet2fhir

./: .gitignore  README.md  pyproject.toml
eval/: eval_meds_list.csv
eval/notebooks/: README.md  compute_evaluation.ipynb  evaluation.xlsx  randomizer_meds.ipynb
ig/: ig.ini  sushi-config.yaml
ig/input/fsh/: ValueSet.fsh  activeIngredient_profile.fsh  contraIndication_profile.fsh  excipientIngredient_profile.fsh  interaction_profile.fsh  medicalKnowledge_leaflet.fsh  medicinalProductDefinition_leaflet_profile.fsh  organisation_profile.fsh  (+2 more)
prompts/leaflet_as_txt/: 1-18099.txt  1-19671.txt  1-24507.txt  1-28622.txt  1-29327.txt  1-31947.txt  136971.txt  137219.txt  141676.txt  16638.txt
prompts/questionsets/: sets.py
samples/: README.md
samples/fhir_resources/: cud_1-19251.json  mk_1-19251.json  mpd_1-19251.json  org_1-19251.json
samples/llm_outputs/: 1-18099_icw.json  1-18099_mk.json  1-18099_mpd.json  1-18099_org.json  1-18099_undes.json  1-19251_icw.json  1-19251_mk.json  1-19251_mpd.json  1-19251_org.json  1-19251_undes.json  1-19671_icw.json  1-19671_mk.json  1-19671_mpd.json  1-19671_org.json  1-19671_undes.json  1-24507_icw.json  1-24507_mk.json  1-24507_mpd.json  1-24507_org.json  1-24507_undes.json  1-28622_icw.json  1-28622_mk.json  1-28622_mpd.json  1-28622_org.json  1-28622_undes.json  1-29327_icw.json  1-29327_mk.json  1-29327_mpd.json  1-29327_org.json  1-29327_undes.json  1-31947_icw.json  1-31947_mk.json  1-31947_mpd.json  1-31947_org.json  1-31947_undes.json  136971_icw.json  136971_mk.json  136971_mpd.json  136971_undes.json  137219_icw.json  (+15 more)
(+1 files in other folders)
