[tool.poetry]
name = "leaflet2fhir"
version = "0.1.0"
description = ""
authors = ["kathi"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"

jupyterlab = "^4.1.6"

pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
